# netflix_project

./: README.md  pyproject.toml  requirements.txt
dags/: netflix_airbyte.py  netflix_dbt.py  pipeline.py
